src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Applications__c</fullName>
        <label>Applications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stamping</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Metal Forming</fullName>
                </value>
                <value>
                    <fullName>Printing</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Machining</fullName>
                </value>
                <value>
                    <fullName>Web Processing</fullName>
                </value>
                <value>
                    <fullName>Robotics</fullName>
                </value>
                <value>
                    <fullName>Servo Driven Roll Feeder Upgrade</fullName>
                </value>
                <value>
                    <fullName>Material Handling</fullName>
                </value>
                <value>
                    <fullName>Gantry</fullName>
                </value>
                <value>
                    <fullName>Etc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <label>Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_of_Interest__c</fullName>
        <label>Product of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indramat</fullName>
                </value>
                <value>
                    <fullName>Alum Profiles</fullName>
                </value>
                <value>
                    <fullName>Ergoprosys</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_of_Interest__c</fullName>
        <label>Products of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
                <value>
                    <fullName>Value 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFC__c</fullName>
        <label>RFC</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Razon_Social__c</fullName>
        <label>Razón Social</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_List__c</fullName>
        <label>SIC List</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
                <value>
                    <fullName>1000</fullName>
                </value>
                <value>
                    <fullName>1040</fullName>
                </value>
                <value>
                    <fullName>1090</fullName>
                </value>
                <value>
                    <fullName>1220</fullName>
                </value>
                <value>
                    <fullName>1221</fullName>
                </value>
                <value>
                    <fullName>1311</fullName>
                </value>
                <value>
                    <fullName>1381</fullName>
                </value>
                <value>
                    <fullName>1382</fullName>
                </value>
                <value>
                    <fullName>1389</fullName>
                </value>
                <value>
                    <fullName>1400</fullName>
                </value>
                <value>
                    <fullName>1520</fullName>
                </value>
                <value>
                    <fullName>1531</fullName>
                </value>
                <value>
                    <fullName>1540</fullName>
                </value>
                <value>
                    <fullName>1600</fullName>
                </value>
                <value>
                    <fullName>1623</fullName>
                </value>
                <value>
                    <fullName>1700</fullName>
                </value>
                <value>
                    <fullName>1731</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIC__c</fullName>
        <label>SIC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_as_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Companies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Companies</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>SAMPLE</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>TEXAS</value>
        </filters>
        <label>SAMPLE</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>